[gd_scene load_steps=4 format=2]

[ext_resource path="res://HookProjectile.gd" type="Script" id=1]
[ext_resource path="res://hookProjectile.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="HookProjectile" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="WallDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
shape = SubResource( 1 )

[node name="ObjectDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectDetector"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="WallDetector" to="." method="_on_WallDetector_body_entered"]
[connection signal="body_entered" from="ObjectDetector" to="." method="_on_ObjectDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
